<resources>
    <string name="app_name">Mobile Based Tourist Spot and Shop Navigator</string>

    <string name="map_box_access_token">pk.eyJ1IjoiY2VkaWVwZXJlejEyIiwiYSI6ImNrM2lnN202eDA3eHAzZHM3a2kyOTRmbXAifQ.aycguHgjg4saApLr140G8w</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="search_for_places">Search for Places</string>
    <string name="todo">TODO</string>
    <string name="spots_near_you">Spots near you</string>
    <string name="sample_name">Lee Ji Eun</string>
    <string name="sample_email">lee_ji_eun@gmail.com</string>
    <string name="sample_count">1.2K</string>
    <string name="visited_places">Visited Places</string>
    <string name="sample_time_place">12/12/1999 at Rizal Park</string>
    <string name="sample_caption">Lorem Ipsum Lorem Ipsum Lorem Ipsum</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login_text">Login</string>
    <string name="signup_text">Sign Up</string>
    <string name="personal_information">Personal Information</string>
    <string name="account_information">Account Information</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="i_have_an_account">I have an account</string>
    <string name="dashboard">Dashboard</string>
    <string name="user_profile">User Profile</string>
    <string name="notification">Notification</string>
    <string name="post">Post</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_profile_photo">Change Profile Photo</string>
    <string name="sample_first_name">Ji Eun</string>
    <string name="sample_last_name">Lee</string>
    <string name="obando_bulacan">Obando, Bulacan</string>
    <string name="bahay_ni_cedie">Bahay ni Cedie</string>
    <string name="title_activity_dashboard__nav__drawer">Dashboard_Nav_Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
