<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserProfileFragment">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="256dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_fragment_civ_profile_photo"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_centerInParent="true"
            android:src="@drawable/sample_photo"
            app:civ_border_color="@android:color/white"
            app:civ_border_width="2dp" />

        <TextView
            android:id="@+id/user_fragment_txtv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_fragment_civ_profile_photo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="@string/sample_name"
            android:textColor="@android:color/white"
            android:textSize="@dimen/medium_text"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/user_fragment_txtv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_fragment_txtv_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="2dp"
            android:text="@string/sample_email"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/small_text"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">


        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="@string/sample_count"
            android:textColor="@android:color/black"
            android:textSize="@dimen/large_text"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView6"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="4dp"
            android:text="@string/visited_places"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/small_text"
            android:textStyle="bold" />
    </RelativeLayout>

    <view
        android:id="@+id/view"
        class="androidx.constraintlayout.widget.ConstraintLayout"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/post"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:textSize="@dimen/large_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/post_profile_image"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:src="@drawable/sample_photo"
            />

        <TextView
            android:id="@+id/post_profile_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sample_name"
            android:textColor="@android:color/black"
            android:textSize="@dimen/medium_text"
            android:textStyle="bold"
            android:layout_toRightOf="@id/post_profile_image"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"/>

        <TextView
            android:id="@+id/post_profile_time_place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="12/12/1999 at Rizal Park"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/small_text"
            android:textStyle="bold"
            android:layout_toRightOf="@id/post_profile_image"
            android:layout_marginLeft="8dp"
            android:layout_below="@id/post_profile_user_name"/>

        <TextView
            android:id="@+id/post_caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Lorem Ipsum Lorem Ipsum Lorem Ipsum"
            android:textSize="@dimen/small_text"
            android:layout_below="@id/post_profile_image"
            android:layout_marginTop="8dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:scaleType="centerCrop"
            android:layout_marginTop="8dp"
            android:src="@drawable/sample_post_photo"
            android:layout_below="@id/post_caption"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>